--- a/src/Components/CSS/Navbar.css
+++ b/src/Components/CSS/Navbar.css
@@ -1,1 +1,11 @@
+.position {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: white;
+}
 
+.shadowEdit:hover {
+  box-shadow: 3px 2px 5px 10px;
+}
+/* dropdown hover*/
