--- a/src/Components/CSS/Navbar.css
+++ b/src/Components/CSS/Navbar.css
@@ -1,8 +1,9 @@
 .position {
-  position: -webkit-sticky;
+  /* position: -webkit-sticky; */
   position: sticky;
   top: 0;
   background-color: white;
+  z-index: 3;
 }
 
 .shadowEdit:hover {
