--- a/src/Components/CSS/Navbar3.css
+++ b/src/Components/CSS/Navbar3.css
@@ -1,12 +1,20 @@
-/* * {
-  margin: 0;
-  padding: 0;
+* {
+  /* margin: 0;
+  padding: 0; */
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+.position {
+  /* position: -webkit-sticky; */
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: 3;
+}
 nav {
-  background: black;
-  position: fixed;
+  /* background: black; */
+  /* color: black; */
+  position: absolute;
   width: 100%;
   z-index: 999;
   height: 65px;
@@ -18,35 +26,38 @@ nav {
   max-width: 100vw;
   padding: 0 30px;
   margin: auto;
-  display: flex;
+  /* display: flex; */
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 .wrapper .logo a {
-  color: #fff;
+  /* color: #fff; */
   text-decoration: none;
   font-size: 27px;
   font-weight: 600;
 }
 .wrapper .nav-links {
-  display: inline-flex;
+  /* display: inline-flex; */
 }
 .nav-links li {
   list-style: none;
 }
 .nav-links li a {
-  color: #fff;
+  /* color: #fff; */
   text-decoration: none;
   font-size: 18px;
   font-weight: 500;
-  padding: 9px 15px;
+  padding: 15px 15px 25px 15px;
   border-radius: 5px;
   transition: all 0.3 ease;
+  font-weight: bold;
 }
 
 .nav-links li a:hover {
-  background: #3a3b3c;
+  color: deeppink;
+  background: white;
+  box-shadow: 0px 5px 5px 5px rgba(49, 43, 43, 0.35);
 }
 
 .nav-links li:hover .mega-box {
@@ -66,7 +77,7 @@ nav {
   transition: all 0.3 ease;
 }
 .mega-box .content {
-  background: #242526;
+  background: white;
   padding: 25px 20px;
   display: flex;
   width: 100%;
@@ -79,7 +90,7 @@ nav {
 }
 
 .content .row header {
-  color: #f2f2f2;
+  color: black;
   font-size: 20px;
   font-weight: 500;
 }
@@ -99,7 +110,10 @@ nav {
 
 .row .mega-links li a {
   padding: 0 20px;
-  color: #d9d9d9;
+  color: black;
   font-size: 17px;
   display: block;
-} */
+}
+.row .mega-links li a:hover {
+  color: darkmagenta;
+}
